[gd_scene load_steps=7 format=2]

[ext_resource path="res://menus/SettingsMenu.gd" type="Script" id=1]
[ext_resource path="res://guis/MobileTheme.tres" type="Theme" id=2]
[ext_resource path="res://sprites/background/frise_spaciale.png" type="Texture" id=3]
[ext_resource path="res://guis/MobileThemeNoBackground.tres" type="Theme" id=4]
[ext_resource path="res://guis/TextureScrollerMaterial.tres" type="Material" id=5]
[ext_resource path="res://core/behaviors/MouseFocusBinder.gd" type="Script" id=6]

[node name="SettingsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.943848
margin_right = 0.943848
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="TextureRect" parent="."]
material = ExtResource( 5 )
anchor_right = 2.731
anchor_bottom = 1.0
size_flags_horizontal = 3
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_right = 921.6
margin_bottom = 540.0

[node name="RichTextLabel" type="Label" parent="PanelContainer/VBoxContainer"]
margin_right = 921.0
margin_bottom = 48.0
text = "Settings"

[node name="AppSettingsLayout" type="Control" parent="PanelContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 921.0
margin_bottom = 384.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AppSettingsScroll" type="ScrollContainer" parent="PanelContainer/VBoxContainer/AppSettingsLayout"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "The child control will be added procedurally by a script, since it is generated on-the-fly."
}

[node name="ControlsButton" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 388.0
margin_right = 921.0
margin_bottom = 436.0
text = "Controls"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenDirButton" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 440.0
margin_right = 921.0
margin_bottom = 488.0
text = "Open Settings Directory"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpaceBelow" type="HSeparator" parent="PanelContainer/VBoxContainer"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_top = 291.0
margin_right = 907.0
margin_bottom = 468.0
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 492.0
margin_right = 921.0
margin_bottom = 540.0
text = "Back"

[node name="MouseFocusBinder" type="Node" parent="PanelContainer/VBoxContainer"]
script = ExtResource( 6 )

[connection signal="visibility_changed" from="." to="." method="_on_SettingsMenu_visibility_changed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ControlsButton" to="." method="_on_ControlsButton_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/OpenDirButton" to="." method="_on_OpenDirButton_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
